feat(cart): 实现添加购物车与购物车查询 - cart 模块新增 addToCart、cartList 接口，购物车数据使用 Redis Hash 存储 - 添加购物车支持数量累加、单件商品数量上限 99、购物车商品种类上限 50 - 购物车查询按 createTime 倒序，并批量刷新商品实时售价 - product 模块新增内部接口 /getSkuPriceList，支持按 SKU 列表批量查询售价 - 修正商品 SKU 缓存 key 拼写：sku:porduct:data -> sku:product:data - 同步调整 RemoteProductService 注释和 fallback 错误文案
 本次变动解析

- 数据模型：以 user:cart:{userId} 为 Redis Hash key，
  field 为 skuId，value 为 CartInfo，天然支持按用户隔离和按 SKU 去重
- 添加流程：已存在该 SKU 时累加数量；不存在时先校验种类不超过 50，
  再远程获取 SKU 基本信息与实时价格，最后写入购物车
- 查询流程：读取当前用户购物车全量数据，按 createTime 倒序返回，
  并将 skuIdList 批量传给商品服务刷新 salePrice，避免逐个远程调用
- 批量价格接口使用 @InnerAuth，只允许服务间 Feign 调用，不对外暴露
- 商品服务批量价格查询只返回 id 和 salePrice，聚焦购物车展示所需的实时售价